--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
           <div class="collapse text-center navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link " href="#footer">About</a> 
+                <a class="nav-link " style="color: #bb83a7;" href="about.html" onMouseOver="this.style.color='#421b38'"
+                onMouseOut="this.style.color='#bb83a7'">About</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#pricing">Services</a> 
+                <a class="nav-link" style="color: #bb83a7;" href="#pricing" onMouseOver="this.style.color='#421b38'"
+                onMouseOut="this.style.color='#bb83a7'">Services</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#title">Projects</a> 
+                <a class="nav-link" style="color: #bb83a7;" href="#title" onMouseOver="this.style.color='#421b38'"
+                onMouseOut="this.style.color='#bb83a7'">Projects</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#title">Contact</a> 
+                <a class="nav-link" style="color: #bb83a7;" href="#title" onMouseOver="this.style.color='#421b38'"
+                onMouseOut="this.style.color='#bb83a7'">Contact</a> 
               </li>
             </ul>
           </div>
