--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <h1>Aswathy Saji</h1>
               <div class="typewriter" id="myTypewriter">
                 <h3>I am a 
-                  <span class="txt-type" data-wait="3000" data-words='["Student", "Frontend Developer", "Designer"]'></span>
+                  <span class="txt-type" data-wait="3000" data-words='["Student.", "Frontend Developer.", "Designer."]'></span>
                 </h3>
               </div>
             </div>
