--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           <div class="collapse text-center navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
+                <a class="nav-link" style="color: #bb83a7;" href="index.html" onMouseOver="this.style.color='#421b38'"
+                onMouseOut="this.style.color='#bb83a7'">Home</a> 
+              </li>
+              <li class="nav-item">
                 <a class="nav-link " style="color: #bb83a7;" href="about.html" onMouseOver="this.style.color='#421b38'"
                 onMouseOut="this.style.color='#bb83a7'">About</a> 
               </li>
