--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="Images/logo" alt="logo">
           </a>
           <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
       </div>
         <!-- Title -->
         <div class="container  introduction">
-        <div class="row justify-content-between">
+        <div class="row justify-content-evenly">
           <div class="col-lg-6 align-self-center title">
             <div class="heading">
               <h1>Aswathy Saji</h1>
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="col-lg-6 image">
-            <img src="Images/illustration-mockups.svg" alt="bg">
+            <img src="Images/61.-Web-Design.svg" alt="bg">
           </div>
         </div>
       </div>
