--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               <div class="container about">
                 <div class="row justify-content-evenly">
                   <div class="col-lg-6 about-image text-center align-self-center">
-                    <img src="Images/Aswathy.jpeg" class="about-img" alt="Aswathy">
+                    <img src="Images/Aswathy.png" class="about-img" alt="Aswathy">
                   </div>
                   <div class="col-lg-6 para align-self-center">
                     <div>
