--- a/about.html
+++ b/about.html
@@ -68,7 +68,17 @@
                   </div>
                   <div class="col-lg-6 para align-self-center">
                     <div>
-                      <p>Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain, I am a girl who is very passionate to design and develop websites. Now I am a third-year Computer Science and Engineering student at Government College of Engineering, Kannur. Well, my journey as a web developer started in this lockdown. In those past months, I was trying to develop my skill sets. And now I am confident with what I have learned so far. I have many other pastimes like singing, dancing, reading, drawing, and basketball. I tried to reach out my hands across different areas of my interest, and this site showcases who I am. Just started to explore, many more to go.</p>
+                      <p>Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain,
+                        I am a girl who is very passionate to design and develop websites. Now I am a third-year Computer Science and Engineering student 
+                        at Government College of Engineering, Kannur. My journey as a web developer has taught me a lot of things about myself, 
+                        but the most important thing I've learned is that I don't give up. It takes more than natural talent to become good at something; 
+                        you have to love and enjoy what you are doing. And now I am satisfied and happy with myself.. 
+                        Also as the start of my career as a web developer, now I am working in two web development teams in my college. 
+                        I am working on developing the official websites of the technical clubs that I am part of.
+                        My persistence is the secret of my success so far, and I know it will serve me well in college and beyond.
+                        I have many other pastimes like singing, dancing, reading, drawing, and basketball. 
+                        I tried to reach out my hands across different areas of my interest, and this site showcases who I am. 
+                        Just started to explore, many more to go.</p>
                     </div>
                   </div>
                 </div>
