--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/97124b44f5.js" crossorigin="anonymous"></script>
 </head>
 <body>
           <!-- Nav Bar -->
@@ -57,12 +54,12 @@
         <!-- Title -->
         <div class="container  introduction">
         <div class="row justify-content-evenly">
-          <div class="col-lg-6 align-self-center title">
+          <div class="col-lg-6 align-self-center title " data-aos="zoom-in" data-aos-duration="1000">
             <div class="heading">
               <h1>Aswathy Saji</h1>
               <div class="typewriter" id="myTypewriter">
                 <h3>I am a 
-                  <span class="txt-type" data-wait="3000" data-words='["Student.", "Frontend Developer.", "Web Designer."]'></span>
+                  <span class="txt-type" data-wait="3000" data-words='["Student.", "Frontend Developer.", "Designer."]'></span>
                 </h3>
               </div>
             </div>
@@ -77,7 +74,7 @@
               <button class="button"><a href="Images/assets/AswathySaji.pdf" download>My Resume</a></button>
             </div>
           </div>
-          <div class="col-lg-6 image">
+          <div class="col-lg-6 image" data-aos="zoom-in" data-aos-duration="1000">
             <img src="Images/61.-Web-Design.svg" alt="bg">
           </div>
         </div>
@@ -85,6 +82,11 @@
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/97124b44f5.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
