--- a/about.html
+++ b/about.html
@@ -8,13 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/97124b44f5.js" crossorigin="anonymous"></script>
 </head>
 <body>
               <!-- Nav Bar -->
@@ -56,17 +53,17 @@
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col text-center about-me">
+                  <div class="col text-center about-me" data-aos="fade-up" data-aos-duration="1000">
                     <h1>About Me</h1>
                   </div>
                 </div>
               </div>
               <div class="container about">
                 <div class="row justify-content-evenly">
-                  <div class="col-lg-6 about-image text-center align-self-center">
+                  <div class="col-lg-6 about-image text-center align-self-center" data-aos="fade-right" data-aos-duration="1000">
                     <img src="Images/Aswathy.png" class="about-img" alt="Aswathy">
                   </div>
-                  <div class="col-lg-6 para align-self-center">
+                  <div class="col-lg-6 para align-self-center" data-aos="fade-left" data-aos-duration="1000">
                     <div>
                       <p>Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain,
                         I am a girl who is very passionate to design and develop websites. Now I am a third-year Computer Science and Engineering student 
@@ -87,5 +84,13 @@
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/97124b44f5.js" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+          AOS.init();
+      </script>
 </body>
 </html>
