--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Title -->
         <div class="container  introduction">
         <div class="row justify-content-evenly">
-          <div class="col-lg-6 align-self-center title " data-aos="zoom-in" data-aos-duration="1000">
+          <div class="col-lg-6 align-self-center title " data-aos="zoom-out" data-aos-duration="1000">
             <div class="heading">
               <h1>Aswathy Saji</h1>
               <div class="typewriter" id="myTypewriter">
@@ -74,7 +74,7 @@
               <button class="button"><a href="Images/assets/AswathySaji.pdf" download>My Resume</a></button>
             </div>
           </div>
-          <div class="col-lg-6 image" data-aos="zoom-in" data-aos-duration="1000">
+          <div class="col-lg-6 image" data-aos="zoom-out" data-aos-duration="1000">
             <img src="Images/61.-Web-Design.svg" alt="bg">
           </div>
         </div>
