--- a/about.html
+++ b/about.html
@@ -80,7 +80,13 @@
                   </div>
                 </div>
               </div>
-              
+              <div class="container text-center">
+                <div class="row">
+                  <div>
+                    <button style="width: 20%;" class="button"><a href="mailto:aswathy2saji@gmail.com" >Hire Me</a></button>
+                  </div>
+                </div>
+              </div>
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
