--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col text-center about-me" data-aos="fade-up" data-aos-duration="500">
+                  <div class="col text-center about-me" data-aos="fade-up" data-aos-duration="1000">
                     <h1>About Me</h1>
                   </div>
                 </div>
@@ -65,7 +65,8 @@
                   </div>
                   <div class="col-lg-6 para align-self-center" data-aos="fade-left" data-aos-duration="1000">
                     <div>
-                      <p>Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain,
+                      <p>
+                        Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain,
                         I am a girl who is very passionate to design and develop websites. Now I am a third-year Computer Science and Engineering student 
                         at Government College of Engineering, Kannur. My journey as a web developer has taught me a lot of things about myself, 
                         but the most important thing I've learned is that I don't give up. It takes more than natural talent to become good at something; 
@@ -75,18 +76,32 @@
                         My persistence is the secret of my success so far, and I know it will serve me well in college and beyond.
                         I have many other pastimes like singing, dancing, reading, drawing, and basketball. 
                         I tried to reach out my hands across different areas of my interest, and this site showcases who I am. 
-                        Just started to explore, many more to go.</p>
+                        Just started to explore, many more to go.
+                      </p>
                     </div>
+                  </div>
+                </div>
+              </div>
+              <div class="container-fluid skills">
+                <div class="row text-center justify-content-around">
+                  <h1>My Skills</h1>
+                </div>
+                <div class="row skills-content">
+                  <div class="col-lg-6 skill-para">
+                  </div>
+                  <div class="col-lg-6 skill-image text-center align-self-center">
+                    <img src="Images/skills.jpg" alt="skills">
                   </div>
                 </div>
               </div>
               <div class="container text-center">
                 <div class="row">
                   <div>
-                    <button style="width: 20%;" class="button"><a href="mailto:aswathy2saji@gmail.com" >Hire Me</a></button>
+                    <button class="skill-button"><a href="mailto:aswathy2saji@gmail.com" >Hire Me</a></button>
                   </div>
                 </div>
               </div>
+              
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
@@ -97,6 +112,7 @@
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
           AOS.init();
+          AOS.refresh();
       </script>
 </body>
 </html>
