--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <link rel="icon" href="Images/logo">
     <title>About</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -54,7 +56,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col text-center about-me" data-aos="fade-up" data-aos-duration="1000">
-                    <h1>About Me</h1>
+                    <h1>Who am I?</h1>
                   </div>
                 </div>
               </div>
@@ -82,12 +84,63 @@
                   </div>
                 </div>
               </div>
-              <div class="container text-center">
+              <div class="container skills">
+                <div class="row text-center skill-heading justify-content-around">
+                  <h1>Skills</h1>
+                </div>
+                <div class="row skills-content justify-content-evenly">
+                  <div class="col-lg-6 skill-image text-center align-self-center">
+                    <img src="Images/skills.jpg" alt="skill-image">
+                  </div>
+                  <div class="col-lg-6 skill-para align-self-center">
+                    <div class="wrapper">
+                      <div class="skillbar" data-percent="95%">
+                        <div class="skillbar-title">HTML5</div>
+                        <div class="skill-bar-percent">95%</div>
+                        <div class="skillbar-bar" style="width: 95%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="90%">
+                        <div class="skillbar-title">CSS3</div>
+                        <div class="skill-bar-percent">90%</div>
+                        <div class="skillbar-bar" style="width: 90%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="85%">
+                        <div class="skillbar-title">Javascript</div>
+                        <div class="skill-bar-percent">85%</div>
+                        <div class="skillbar-bar" style="width: 85%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="85%">
+                        <div class="skillbar-title">Bootstrap</div>
+                        <div class="skill-bar-percent">85%</div>
+                        <div class="skillbar-bar" style="width: 85%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="85%">
+                        <div class="skillbar-title">JQuery</div>
+                        <div class="skill-bar-percent">80%</div>
+                        <div class="skillbar-bar" style="width: 80%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="60%">
+                        <div class="skillbar-title">Web design</div>
+                        <div class="skill-bar-percent">60%</div>
+                        <div class="skillbar-bar" style="width: 60%"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="container text-center" >
                 <div class="row">
                   <div>
                     <button class="skill-button"><a href="mailto:aswathy2saji@gmail.com" >Hire Me</a></button>
                   </div>
                 </div>
+              </div>
+              <div class="social-media text-center">
+                <a href="https://www.facebook.com/profile.php?id=100009415915759" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/___a_s_w_a_t_h_y___/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/aswathysaji" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/aswathy-saji-68ba47192/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:aswathy2saji@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
               </div>
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
