--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 onMouseOut="this.style.color='#bb83a7'">About</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: #bb83a7;" href="#pricing" onMouseOver="this.style.color='#421b38'"
+                <a class="nav-link" style="color: #bb83a7;" href="services.html" onMouseOver="this.style.color='#421b38'"
                 onMouseOut="this.style.color='#bb83a7'">Services</a> 
               </li>
               <li class="nav-item">
