--- a/about.html
+++ b/about.html
@@ -61,11 +61,11 @@
                 </div>
               </div>
               <div class="container about">
-                <div class="row justify-content-evenly">
-                  <div class="col-lg-6 about-image text-center align-self-center" data-aos="fade-right" data-aos-duration="1000">
+                <div class="row justify-content-evenly" data-aos="fade-up" data-aos-duration="1000">
+                  <div class="col-lg-6 about-image text-center align-self-center" >
                     <img src="Images/Aswathy.png" class="about-img" alt="Aswathy">
                   </div>
-                  <div class="col-lg-6 para align-self-center" data-aos="fade-left" data-aos-duration="1000">
+                  <div class="col-lg-6 para align-self-center">
                     <div>
                       <p>
                         Hey Folks, Myself Aswathy Saji. I know only a name doesn't make any sense. Let me explain,
