--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
           </div>
         </div>
       </div>
+      <a class="btnScrollToTop hide">
+        <i class="fas fa-arrow-up"></i>
+      </a>
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
@@ -88,5 +91,6 @@
     <script src="https://kit.fontawesome.com/97124b44f5.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
