--- a/about.html
+++ b/about.html
@@ -142,6 +142,9 @@
                 <a href="https://www.linkedin.com/in/aswathy-saji-68ba47192/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="mailto:aswathy2saji@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
               </div>
+              <a class="btnScrollToTop hide">
+                <i class="fas fa-arrow-up"></i>
+              </a>
       <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
@@ -154,5 +157,6 @@
           AOS.init();
           AOS.refresh();
       </script>
+    <script src="scroll.js"></script>
 </body>
 </html>
