--- a/services.html
+++ b/services.html
@@ -129,6 +129,9 @@
             <a href="https://www.linkedin.com/in/aswathy-saji-68ba47192/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <a href="mailto:aswathy2saji@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
           </div>
+          <a class="btnScrollToTop hide">
+            <i class="fas fa-arrow-up"></i>
+          </a>
     <footer>
         <p>&copy; Aswathy Saji | All Rights Reserved</p>
       </footer>
@@ -140,5 +143,6 @@
       <script>
           AOS.init();
       </script>
+    <script src="scroll.js"></script>
 </body>
 </html>
