--- a/project.html
+++ b/project.html
@@ -41,7 +41,7 @@
                     onMouseOut="this.style.color='#bb83a7'">Services</a> 
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" style="color: #bb83a7;" href="#title" onMouseOver="this.style.color='#421b38'"
+                    <a class="nav-link" style="color: #bb83a7;" href="project.html" onMouseOver="this.style.color='#421b38'"
                     onMouseOut="this.style.color='#bb83a7'">Projects</a> 
                   </li>
                   <li class="nav-item">
