--- a/project.html
+++ b/project.html
@@ -44,10 +44,6 @@
                     <a class="nav-link" style="color: #bb83a7;" href="project.html" onMouseOver="this.style.color='#421b38'"
                     onMouseOut="this.style.color='#bb83a7'">Projects</a> 
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" style="color: #bb83a7;" href="#title" onMouseOver="this.style.color='#421b38'"
-                    onMouseOut="this.style.color='#bb83a7'">Contact</a> 
-                  </li>
                 </ul>
               </div>
             </nav>
@@ -68,10 +64,9 @@
                             <div class="right">
                                 <h2 class="project-title">SHE GCEK Website</h2>
                                 <p class="description">
-                                    Developed SHE GCEK Official Website.
+                                    Developed SHE GCEK Official Website using HTML,CSS,JS and Bootstrap.
                                 </p>
                                 <div class="buttons">
-                                    <a href="#" class="primary-btn">Know More</a>
                                     <a href="https://shegcek.github.io/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
@@ -85,10 +80,9 @@
                             <div class="right">
                                 <h2 class="project-title">My Official Website</h2>
                                 <p class="description">
-                                    Developed my official portfolio website.
+                                    Developed my official portfolio website using HTML,CSS,JS and Bootstrap.
                                 </p>
                                 <div class="buttons">
-                                    <a href="#" class="primary-btn">Know More</a>
                                     <a href="https://aswathysaji.github.io/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
@@ -96,18 +90,16 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
-                                    <img src="Images/website.jpg" alt="she logo">
+                                    <img src="Images/myweb.jpg" alt="my logo">
                                 </div>
                             </div>
                             <div class="right">
-                                <h2 class="project-title">Portfolio Website</h2>
+                                <h2 class="project-title">Movie Recommendation App based on our emotions.</h2>
                                 <p class="description">
-                                    This website is made as part of a competition conducted by the CSE forum of ISTE GCEK and I bagged the first prize
-                                    in the competition.
+                                    Developed a movie recommendation app as my first year mini project using HTML,CSS,Bootstrap and Flask framework.
                                 </p>
                                 <div class="buttons">
-                                    <a href="#" class="primary-btn">Know More</a>
-                                    <a href="https://aswathysaji.github.io/Weibo-folio/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                    <a href="http://moodmovies.herokuapp.com/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -125,8 +117,40 @@
                                     It is my version of simon game.
                                 </p>
                                 <div class="buttons">
-                                    <a href="#" class="primary-btn">Know More</a>
                                     <a href="https://aswathysaji.github.io/simon_game/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
+                                    <img src="Images/website.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Portfolio Website</h2>
+                                <p class="description">
+                                    This website is made as part of a competition conducted by the CSE forum of ISTE GCEK and I bagged the first prize
+                                    in the competition.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://aswathysaji.github.io/Weibo-folio/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
+                                    <img src="Images/website.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Single Page Website</h2>
+                                <p class="description">
+                                    Developed a single page website using HTML,CSS and Bootstrap.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://aswathysaji.github.io/responsive_layout_for_your_startup/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -139,11 +163,42 @@
                             <div class="right">
                                 <h2 class="project-title">Weather App</h2>
                                 <p class="description">
-                                    Developed a Weather App. The weather data is obtained using API.
+                                    Developed a Weather App using JS. The weather data is obtained using API.
                                 </p>
                                 <div class="buttons">
-                                    <a href="#" class="primary-btn">Know More</a>
                                     <a href="https://aswathysaji.github.io/Weather-App/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
+                                    <img src="Images/app.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Text Editor</h2>
+                                <p class="description">
+                                    Developed a Text Editor using JS.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://aswathysaji.github.io/Text-Editor/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
+                                    <img src="Images/app.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Beat Box</h2>
+                                <p class="description">
+                                    Developed a Beatbox website using JavaScript. Currently working using keys on the keyboard.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://aswathysaji.github.io/Beat-Box/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -156,10 +211,9 @@
                             <div class="right">
                                 <h2 class="project-title">Drumkit Website</h2>
                                 <p class="description">
-                                    Developed a Drumkit Wesite.
+                                    Developed a Drumkit Wesite using JS.
                                 </p>
                                 <div class="buttons">
-                                    <a href="#" class="primary-btn">Know More</a>
                                     <a href="https://aswathysaji.github.io/javascript-drum_kit_website/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
