--- a/project.html
+++ b/project.html
@@ -90,6 +90,22 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
+                                    <img src="Images/ecom.jpg" alt="my logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">E-Commerce website for soft toys</h2>
+                                <p class="description">
+                                    An E-Commerce site developed as part of my internship at Little cuckoo creative marketing hub. Developed using HTML,CSS,JS and Bootstrap.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://aswathysaji.github.io/littlecuckoosofttoys/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
                                     <img src="Images/myweb.jpg" alt="my logo">
                                 </div>
                             </div>
