--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 onMouseOut="this.style.color='#bb83a7'">Services</a> 
               </li>
               <li class="nav-item">
+                <a class="nav-link" style="color: #bb83a7;" href="experience.html" onMouseOver="this.style.color='#421b38'"
+                onMouseOut="this.style.color='#bb83a7'">Experiences</a> 
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" style="color: #bb83a7;" href="project.html" onMouseOver="this.style.color='#421b38'"
                 onMouseOut="this.style.color='#bb83a7'">Projects</a> 
               </li>
