--- a/experience.html
+++ b/experience.html
@@ -88,7 +88,7 @@
                   </div>
                 </div>
               </div>
-              <div class="container Internship" data-aos="fade-up" data-aos-duration="1000">
+              <div class="container club" data-aos="fade-up" data-aos-duration="1000">
                 <div class="row justify-content-evenly flex-column-reverse flex-lg-row">
                   <div class="col-lg-6 align-self-center title">
                     <div>
