--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                   </div>
                 </div>
               </div>
-              <div class="container skills">
+              <div class="container skills" data-aos="fade-up" data-aos-duration="1000">
                 <div class="row text-center skill-heading justify-content-around">
                   <h1>Skills</h1>
                 </div>
