--- a/experience.html
+++ b/experience.html
@@ -94,6 +94,10 @@
                     <div>
                       <h2 style="color:#ca4da0;">Internships</h2>
                       <div class="mt-4">
+                        <h5>Cybervie-Ionots Technologies Pvt Ltd (Present)</h5>
+                        <h6>UI/UX Designer Intern</h6>
+                      </div>
+                      <div class="mt-4">
                         <h5>DeepFlow Technologies (Present)</h5>
                         <h6>Student Intern</h6>
                       </div>
