--- a/experience.html
+++ b/experience.html
@@ -99,7 +99,7 @@
                       </div>
                       <div class="mt-4">
                         <h5>DeepFlow Technologies (Present)</h5>
-                        <h6>Student Intern</h6>
+                        <h6>Project Intern</h6>
                       </div>
                       <div class="mt-4">
                         <h5>Little Cuckoo Creative Marketing Hub (3 Months)</h5>
