--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="mailto:aswathy2saji@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
             <div>
-              <button class="button"><a href="Images/Aswathy_Saji.pdf" download>My Resume</a></button>
+              <button class="button"><a href="Aswathy_Saji.pdf" download>My Resume</a></button>
             </div>
           </div>
           <div class="col-lg-6 image" data-aos="zoom-out" data-aos-duration="1000">
