--- a/experience.html
+++ b/experience.html
@@ -94,12 +94,12 @@
                     <div>
                       <h2 style="color:#ca4da0;">Internships</h2>
                       <div class="mt-4">
-                        <h5>Cybervie-Ionots Technologies Pvt Ltd (Present)</h5>
-                        <h6>UI/UX Designer Intern</h6>
-                      </div>
-                      <div class="mt-4">
                         <h5>DeepFlow Technologies (Present)</h5>
                         <h6>Project Intern</h6>
+                      </div>
+                      <div class="mt-4">
+                        <h5>Cybervie-Ionots Technologies Pvt Ltd (1 Month)</h5>
+                        <h6>UI/UX Designer Intern</h6>
                       </div>
                       <div class="mt-4">
                         <h5>Little Cuckoo Creative Marketing Hub (3 Months)</h5>
