--- a/about.html
+++ b/about.html
@@ -94,6 +94,21 @@
                   </div>
                   <div class="col-lg-6 skill-para align-self-center">
                     <div class="wrapper">
+                       <div class="skillbar" data-percent="100%">
+                        <div class="skillbar-title">Web design</div>
+                        <div class="skill-bar-percent">100%</div>
+                        <div class="skillbar-bar" style="width: 100%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="85%">
+                        <div class="skillbar-title">Frontend Development</div>
+                        <div class="skill-bar-percent">85%</div>
+                        <div class="skillbar-bar" style="width: 85%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="70%">
+                        <div class="skillbar-title">Backend Development</div>
+                        <div class="skill-bar-percent">70%</div>
+                        <div class="skillbar-bar" style="width: 70%"></div>
+                      </div>
                       <div class="skillbar" data-percent="95%">
                         <div class="skillbar-title">HTML5</div>
                         <div class="skill-bar-percent">95%</div>
@@ -118,12 +133,17 @@
                         <div class="skillbar-title">JQuery</div>
                         <div class="skill-bar-percent">80%</div>
                         <div class="skillbar-bar" style="width: 80%"></div>
-                      </div>
-                      <div class="skillbar" data-percent="60%">
-                        <div class="skillbar-title">Web design</div>
-                        <div class="skill-bar-percent">100%</div>
-                        <div class="skillbar-bar" style="width: 100%"></div>
-                      </div>
+                       </div>
+                       <div class="skillbar" data-percent="60%
+                        <div class="skillbar-title">Vue.js
+                        <div class="skill-bar-percent">60%</div>
+                        <div class="skillbar-bar" style="width: 6%"></div>
+                       </div>
+                       <div class="skillbar" data-percent="70>
+                        <div class="skillbar-title">Django>
+                        <div class="skill-bar-percent">70</div>
+                        <div class="skillbar-bar" style="width: 70</div>
+                       </div>
                     </div>
                   </div>
                 </div>
