--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                   </div>
                 </div>
               </div>
-              <div class="container skills" data-aos="fade-up" data-aos-duration="1000">
+                            <div class="container skills" data-aos="fade-up" data-aos-duration="900">
                 <div class="row text-center skill-heading justify-content-around">
                   <h1>Skills</h1>
                 </div>
@@ -94,7 +94,7 @@
                   </div>
                   <div class="col-lg-6 skill-para align-self-center">
                     <div class="wrapper">
-                       <div class="skillbar" data-percent="100%">
+                      <div class="skillbar" data-percent="100%">
                         <div class="skillbar-title">Web design</div>
                         <div class="skill-bar-percent">100%</div>
                         <div class="skillbar-bar" style="width: 100%"></div>
@@ -130,10 +130,25 @@
                         <div class="skillbar-bar" style="width: 90%"></div>
                       </div>
                       <div class="skillbar" data-percent="85%">
+                        <div class="skillbar-title">Figma</div>
+                        <div class="skill-bar-percent">90%</div>
+                        <div class="skillbar-bar" style="width: 90%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="70%">
                         <div class="skillbar-title">JQuery</div>
-                        <div class="skill-bar-percent">80%</div>
-                        <div class="skillbar-bar" style="width: 80%"></div>
-                       </div>
+                        <div class="skill-bar-percent">70%</div>
+                        <div class="skillbar-bar" style="width: 70%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="70%">
+                        <div class="skillbar-title">Django</div>
+                        <div class="skill-bar-percent">70%</div>
+                        <div class="skillbar-bar" style="width: 70%"></div>
+                      </div>
+                      <div class="skillbar" data-percent="60%">
+                        <div class="skillbar-title">Vue.js</div>
+                        <div class="skill-bar-percent">60%</div>
+                        <div class="skillbar-bar" style="width: 60%"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
