--- a/project.html
+++ b/project.html
@@ -94,6 +94,38 @@
                         <div class="item">
                             <div class="left">
                                 <div class="img">
+                                    <img src="Images/she.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Event Portal</h2>
+                                <p class="description">
+                                    Developed an Event portal with login, logout, sign up, add event, add venue, update event, update venue, search venue, register for event functionalities using Django. Working to add more functionalities.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://github.com/aswathysaji/Event_Portal_Django" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
+                                    <img src="Images/she.jpg" alt="she logo">
+                                </div>
+                            </div>
+                            <div class="right">
+                                <h2 class="project-title">Vehicle Management System</h2>
+                                <p class="description">
+                                    Developed Vehicle management system with login, sign up, add vehicle, update vehicle, view details of vehicle, delete vehicle and search vehicle functionalities using Django.
+                                </p>
+                                <div class="buttons">
+                                    <a href="https://github.com/aswathysaji/Vehicle_Management_System_Django" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="left">
+                                <div class="img">
                                     <img src="Images/ecom.jpg" alt="my logo">
                                 </div>
                             </div>
@@ -138,22 +170,6 @@
                                 </p>
                                 <div class="buttons">
                                     <a href="https://aswathysaji.github.io/simon_game/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="left">
-                                <div class="img">
-                                    <img src="Images/app.jpg" alt="she logo">
-                                </div>
-                            </div>
-                            <div class="right">
-                                <h2 class="project-title">Weather App</h2>
-                                <p class="description">
-                                    Developed a Weather App using JS. The weather data is obtained using API.
-                                </p>
-                                <div class="buttons">
-                                    <a href="https://aswathysaji.github.io/Weather-App/" target="_blank" class="primary-btn outline">Preview   <i class="fas fa-external-link-alt" style="margin-left: 0.5rem;"></i></a>
                                 </div>
                             </div>
                         </div>
