--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <h1>Aswathy Saji</h1>
               <div class="typewriter" id="myTypewriter">
                 <h3>I'm a 
-                  <span class="txt-type" data-wait="3000" data-words='["Student.", "Frontend Developer.", "Web Designer."]'></span>
+                  <span class="txt-type" data-wait="3000" data-words='["Student.", "Web Developer.", "Web Designer."]'></span>
                 </h3>
               </div>
             </div>
